RESOLVED FIXED81851
[chromium] FPS counter causes garbage to be displayed at top left corner
https://bugs.webkit.org/show_bug.cgi?id=81851
Summary [chromium] FPS counter causes garbage to be displayed at top left corner
Vangelis Kokkevis
Reported 2012-03-21 17:38:45 PDT
This is because the HUD code expected the PlatformCanvas it uses to be cleared on creation which is no longer happening after http://src.chromium.org/viewvc/chrome?view=rev&revision=127196.
Attachments
Proposed Patch (1.66 KB, patch)
2012-03-21 17:45 PDT, Vangelis Kokkevis
no flags
Vangelis Kokkevis
Comment 1 2012-03-21 17:45:47 PDT
Created attachment 133156 [details] Proposed Patch
Adrienne Walker
Comment 2 2012-03-21 18:19:56 PDT
Comment on attachment 133156 [details] Proposed Patch Thanks for fixing this. :)
WebKit Review Bot
Comment 3 2012-03-21 19:21:58 PDT
Comment on attachment 133156 [details] Proposed Patch Clearing flags on attachment: 133156 Committed r111641: <http://trac.webkit.org/changeset/111641>
WebKit Review Bot
Comment 4 2012-03-21 19:22:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.