[chromium] FPS counter causes garbage to be displayed at top left corner https://bugs.webkit.org/show_bug.cgi?id=81851

The HUD expects the PlatformCanvas it paints on to be cleared on creation which is
no longer true after http://src.chromium.org/viewvc/chrome?view=rev&revision=127196 .
This patch does an explicit clearRect before the HUD contents are painted.

Reviewed by Adrienne Walker.

TEST=Manually verified that --show-fps-counter and --show-composited-layer-tree work correctly.

* platform/graphics/chromium/cc/CCHeadsUpDisplay.cpp:
(WebCore::CCHeadsUpDisplay::draw):


Canonical link: https://commits.webkit.org/99140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111641 268f45cc-cd09-0410-ab3c-d52691b4dbfc