Source/WebCore/platform/graphics/chromium/cc/CCHeadsUpDisplay.cpp
@@ -120,6 +120,7 @@ void CCHeadsUpDisplay::draw()
     canvas.resize(hudSize);
     {
         PlatformCanvas::Painter painter(&canvas, PlatformCanvas::Painter::GrayscaleText);
+        painter.context()->clearRect(FloatRect(0, 0, hudSize.width(), hudSize.height()));
         drawHudContents(painter.context(), hudSize);
     }
 
